added first learnings

--- a/index.html
+++ b/index.html
@@ -1,3 +1,83 @@
-<html>
-  <body>Hello, world I'm Jeffrey BIOTCH!!!!!!!!!!!!!!</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jeffrey Basil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      h1 {
+        color: #394a51;
+        font-family: Merriweather;
+        text-align: center;
+      }
+
+      h2 {
+        color: #7fa99b;
+        font-family: Merriweather;
+        font-size: 16px;
+        text-align: center;
+        text-transform: uppercase;
+      }
+
+      .menu-bar {
+        padding: 0px;
+        text-align: center;
+        margin: 40px 0px 20px 0px;
+      }
+
+      .menu-bar li {
+        display: inline;
+        list-style-type: none;
+        margin: 0px 20px;
+      }
+
+      img {
+        display: block;
+        width: 300px;
+        margin: 40px auto;
+      }
+      l p {
+        max-width: 500px;
+        margin: 40px auto;
+        text-align: justify;
+      }
+
+      button {
+        display: block;
+        font-style: bold;
+        margin: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Jeffrey Basil</h1>
+
+    <h2>The baddest basil around</h2>
+
+    <ul class="menu-bar">
+      <li>About</li>
+      <li>Weather</li>
+      <li>Friends</li>
+    </ul>
+    <hr />
+    <img
+      src="https://gbl-oned-cdn-prod.azureedge.net/-/media/fiskars/images/articles/gardening-and-yard-care/planting-and-prep/ultimate-guide-to-growing-caring-for-harvesting-basil-plants.ashx?rev=4b646eeeb6cb4ad1ae3a35340aa11ae9"
+    />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
+    <button>Learn more</button>
+  </body>
 </html>
