--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       h1 {
         color: #394a51;
         font-family: Merriweather;
+        margin: 30px 0px 20px 0px;
         text-align: center;
       }
 
@@ -42,16 +43,30 @@
         width: 300px;
         margin: 40px auto;
       }
-      l p {
+      p {
         max-width: 500px;
         margin: 40px auto;
         text-align: justify;
       }
 
       button {
+        background-color: #fdc57b;
+        border: none;
+        border-radius: 20px;
         display: block;
         font-style: bold;
         margin: auto;
+        padding: 10px 20px;
+      }
+
+      a,
+      a:visited {
+        color: black;
+        text-decoration: none;
+      }
+
+      a:hover {
+        font-weight: bold;
       }
     </style>
   </head>
@@ -62,7 +77,7 @@
 
     <ul class="menu-bar">
       <li>About</li>
-      <li>Weather</li>
+      <li><a href="weather.html">Weather</a></li>
       <li>Friends</li>
     </ul>
     <hr />
