--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
     <style>
       div {
-        max-width: 500px;
         margin: 0 auto;
+        max-width: 500px;
         text-align: center;
       }
       h1 {
@@ -32,9 +32,9 @@
       }
 
       .menu-bar {
+        margin: 40px 0px 20px 0px;
         padding: 0px;
         text-align: center;
-        margin: 40px 0px 20px 0px;
       }
 
       .menu-bar li {
@@ -46,8 +46,8 @@
       img {
         border-radius: 2px;
         display: block;
-        width: 300px;
         margin: 40px auto;
+        width: 300px;
       }
       p {
         line-height: 1.25;
@@ -62,13 +62,13 @@
       }
 
       .formResponse {
-        text-align: center;
         margin-bottom: 0;
+        text-align: center;
       }
 
       #thirstResponse {
-        text-align: center;
         margin-top: 0px;
+        text-align: center;
       }
 
       #answer {
@@ -82,11 +82,11 @@
       }
 
       button {
-        color: #394a51;
         background-color: #fbf2d5;
         border: 2px solid #fbf2d5;
         border-radius: 5px;
         box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+        color: #394a51;
         font-size: 12px;
         font-weight: bold;
         margin: 20px 0px;
@@ -95,7 +95,7 @@
       }
 
       button:hover {
-        background-color: #7fa99b;
+        background: linear-gradient(#7fa99b, #394a51);
         border-color: #7fa99b;
         color: #fbf2d5;
       }
@@ -103,7 +103,7 @@
       a,
       a:visited {
         color: black;
-        text-decoration: none;
+        text-decoration: underline;
       }
 
       a:hover {
@@ -140,6 +140,9 @@
         poor guy. Dramatics aside Jeffrey has a great yield and has even
         fathered a youth. New York born and raised.
       </p>
+      <a href="https://en.wikipedia.org/wiki/Basil"
+        >Learn more about basil plants</a
+      >
       <p class="codedBy">Coded by JackieS.</p>
     </div>
     <script>
