Initial Draft of Grand Rapids Challenge

--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
       <p>
         <input id="answer" type="text" />
         <button id="submit">Submit</button>
+        <br />
       </p>
       <p>
-        Jeffrey Basil - Absolute Unit. Looking out over the Hudson, soaking in
-        the sun, a bushy green plant dominates his sill. Known as the baddest
-        basil around, Jeffrey is secretly a softie. Skip watering him for one
-        day and he becomes so dramaticly wilted, you almost feel bad for the
-        poor guy. Dramatics aside Jeffrey has a great yield and has even
-        fathered a youth. New York born and raised.
+        <strong>Jeffrey Basil</strong> - <em>Absolute Unit.</em> Looking out
+        over the Hudson, soaking in the sun, a bushy green plant dominates his
+        sill. Known as the baddest basil around, Jeffrey is secretly a softie.
+        Skip watering him for one day and he becomes so dramaticly wilted, you
+        almost feel bad for the poor guy. Dramatics aside Jeffrey has a great
+        yield and has even fathered a youth. New York born and raised.
       </p>
       <a href="https://en.wikipedia.org/wiki/Basil"
         >Learn more about basil plants</a
